#627 - Fix rendering on smaller displays - Tweaks for AHC intent

--- a/StackV-web/src/main/webapp/css/intent.css
+++ b/StackV-web/src/main/webapp/css/intent.css
@@ -39,11 +39,11 @@ button:focus {
 
 #intent-panel-header {
     border-bottom: 2px solid black;
-    width: calc(100% - 150px);
+    width: 100%;
     height: 50px;
-    float: right;
+    float: left;
     background: #444;
-    border-radius: 0 15px 0 0;
+    border-radius: 15px 15px 0 0;
     box-shadow: 0 -5px 10px 0px hsla(0, 0%, 10%, .1);
 }
 
@@ -52,17 +52,18 @@ button:focus {
     width: calc(100% - 150px);
     padding: 30px 30px 20px 10px;
     overflow: scroll;
+    border-radius: 0 0 15px 0;
 
     background: linear-gradient(to right, rgba(255,255,255,0.01) 0%,rgba(255,255,255,1) 5%,rgba(255,255,255,1) 95%,rgba(255,255,255,0.01) 100%), url('/StackV-web/img/hex-back.png');
 }
 
 #intent-panel-meta {
     background: linear-gradient(150deg,hsla(0, 0%, 70%, 1) 0%,hsla(0, 0%, 70%, 1) 60%,hsla(0, 0%, 40%, .3) 75%,hsla(0, 0%, 80%, 1) 95%), url(/StackV-web/img/hex-back.png);
-    border-radius: 20px 0 0 20px;
+    border-radius: 0 0 0 15px;
     border-right: 1px solid black;
     border-bottom: 1px solid black;
     width: 150px;
-    height: 100%;
+    height: calc(100% - 50px);
     padding: 20px 10px;
 }
 #intent-panel-meta input {
@@ -71,9 +72,8 @@ button:focus {
 }
 #intent-panel-meta #meta-alias {
     width: 100%;
-    margin: 5px;
+    margin: auto;
     height: 25px;
-    border-radius: 7px;
     padding: 5px;
 }
 #intent-panel-meta-block {
@@ -81,6 +81,19 @@ button:focus {
 }
 #intent-panel-meta-control {
     height: 100px;
+}
+#meta-service {
+    height: 100px;
+    width: 100px;
+    font-weight: bold;
+    margin: 25px 10px 30px 17px;
+    /* border-radius: 50px; */
+    /* background: hsla(0, 0%, 70%, 1); */
+    text-align: center;
+    /* box-shadow: 0 4px 12px 2px rgba(0, 0, 0, 0.5); */
+}
+#meta-title {
+    padding-bottom: 5px;
 }
 
 .intent-stage-div input {
@@ -134,6 +147,10 @@ button:focus {
 .group-name {
     display: inline;
 }
+.group-name.unlabeled {
+    font-size: small;
+    color: rgba(0,0,0,.6);
+}
 
 .group-collapse-toggle:after {
     /* symbol for "opening" panels */
@@ -154,23 +171,6 @@ button:focus {
 }
 .intent-stage-div.conditional.conditioned:not(.active) {
     display: none;
-}
-
-#meta-service {
-    height: 100px;
-    width: 100px;
-    font-weight: bold;
-    margin: 5px 10px 30px 17px;
-    border-radius: 50px;
-    background: hsla(0, 0%, 70%, 1);
-    text-align: center;
-    /* box-shadow: 0 4px 12px 2px rgba(0, 0, 0, 0.5); */
-}
-#meta-title {
-    top: 25%;
-    position: relative;
-    width: 90%;
-    margin: auto;
 }
 
 .button-factory {
@@ -198,11 +198,11 @@ button:focus {
 }
 #intent-prev {
     left: 33%;    
-    bottom: 13%;    
+    bottom: 11%;    
 }
 #intent-next {
     left: 75%;    
-    bottom: 13%;    
+    bottom: 11%;    
 }
 .intent-controls.blocked {
     opacity: .3;
@@ -458,6 +458,7 @@ Triangle breadcrumb
         border-color: #96c03d;
     }
     .cd-breadcrumb.triangle li:first-of-type > * {
+        border-radius: 15px 0 0 0;
         padding-left: 1.6em;
     }
     .cd-breadcrumb.triangle li:last-of-type > * {
